Mark setProgramIconName() as deprecated, it did not do anything

Mark setProgramIconName() as deprecated, it did not do anything since
kcoreaddons no longer uses QtGui so it can not set the icon.

BUG: 337938
REVIEW: 119977